--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,24 @@
 # Django Settings
-SECRET_KEY=django-insecure-change-this-in-production
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
+SECRET_KEY=your-secret-key-here
+DEBUG=False
+ALLOWED_HOSTS=.vercel.app,.now.sh,localhost,127.0.0.1
 
-# Database Settings
-DB_NAME=ecom_backend
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost
-DB_PORT=5432
+# Database Configuration (PostgreSQL on Vercel)
+POSTGRES_DATABASE=your_database_name
+POSTGRES_USER=your_username
+POSTGRES_PASSWORD=your_password
+POSTGRES_HOST=your_host
+POSTGRES_PORT=5432
 
-# Django Environment
-DJANGO_SETTINGS_MODULE=config.settings.development
+# Optional: Custom Domain
+CUSTOM_DOMAIN=your-custom-domain.com
+
+# Email Configuration (Optional)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=your-email@gmail.com
+
+# Django Log Level
+DJANGO_LOG_LEVEL=INFO
