--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,10 @@ DEFAULT_FROM_EMAIL=your-email@gmail.com
 
 # Django Log Level
 DJANGO_LOG_LEVEL=INFO
+
+# Paypal Info
+PAYPAL_MODE=sandbox
+PAYPAL_CLIENT_ID=your_sandbox_client_id
+PAYPAL_CLIENT_SECRET=your_sandbox_client_secret
+PAYPAL_WEBHOOK_ID=your_webhook_id
+PAYPAL_BASE=https://api-m.sandbox.paypal.com
