--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-Django==5.2.*
-psycopg[binary]==3.2.*
-djangorestframework==3.15.*
-django-environ==0.11.*
-django-cors-headers==4.4.*
+Django==5.1.3
+psycopg[binary]==3.2.3
+djangorestframework==3.15.2
+django-environ==0.11.2
+django-cors-headers==4.4.0
 django-filter==24.2
-gunicorn==22.0.*
-djangorestframework-simplejwt==5.3.*
-drf-spectacular==0.26.*
-django-extensions==3.2.*
+gunicorn==22.0.0
+djangorestframework-simplejwt==5.3.0
+drf-spectacular==0.26.5
+django-extensions==3.2.3
 python-decouple==3.8
-Pillow==10.4.*
-dj-database-url==2.1.*
-requests==2.31.*
+Pillow==10.4.0
+dj-database-url==2.1.0
+requests==2.31.0
